--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:cov": "jest --colors --coverage --cache"
   },
   "repository": {
     "type": "git",
