--- a/packages/dura.macro/package.json
+++ b/packages/dura.macro/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/babel-plugin-macros": "^2.8.5",
+    "@types/babel-plugin-tester": "^9.0.5",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-tester": "^10.1.0",
     "father": "^4.0.2"
