--- a/packages/dura.core/package.json
+++ b/packages/dura.core/package.json
@@ -12,9 +12,14 @@
   "license": "ISC",
   "devDependencies": {
     "father": "^4.0.2",
+    "react": "^18.2.0",
     "redux": "^4.2.0"
   },
   "peerDependencies": {
+    "react": ">=16.8",
     "redux": ">=4"
+  },
+  "dependencies": {
+    "immer": "^9.0.15"
   }
 }
