--- a/packages/dura/package.json
+++ b/packages/dura/package.json
@@ -20,5 +20,9 @@
   },
   "devDependencies": {
     "father": "^4.0.2"
+  },
+  "peerDependencies": {
+    "react": ">=16.8",
+    "redux": ">=4"
   }
 }
