--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "declaration": true,
-    "target": "ES5",
+    // "target": "ES5",
     "strict": true,
     "emitDeclarationOnly": true
   }
