--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["dura", "immer", "ityuany", "onecocjs"]
+  "cSpell.words": ["dura", "fatherrc", "immer", "ityuany", "onecocjs"]
 }
