--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "test": "jest",
-    "test:cov": "jest --colors --coverage --cache"
+    "test:cov": "jest --colors --coverage --cache",
+    "build": "pnpm -r run build"
   },
   "repository": {
     "type": "git",
@@ -19,13 +20,14 @@
   },
   "homepage": "https://github.com/onecocjs/dura#readme",
   "devDependencies": {
-    "@types/node": "^18.7.14",
     "@babel/core": "^7.18.13",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/node": "^18.7.14",
     "babel-jest": "^29.0.2",
     "father": "^4.0.2",
     "jest": "^29.0.2",
-    "pnpm": "^7.10.0"
+    "pnpm": "^7.10.0",
+    "typescript": "^4.8.2"
   }
 }
