--- a/packages/dura.core/package.json
+++ b/packages/dura.core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onecocjs/dura.core",
-  "version": "1.0.0",
+  "version": "0.0.1-alpha.1",
   "description": "",
   "main": "./es/index.js",
   "exports": {
