--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "jest",
     "test:cov": "jest --colors --coverage --cache",
-    "build": "pnpm -r run build"
+    "build": "pnpm -r run build",
+    "deploy": "pnpm -r publish --access public"
   },
   "repository": {
     "type": "git",
