--- a/packages/dura.core/package.json
+++ b/packages/dura.core/package.json
@@ -16,6 +16,7 @@
   "author": "ityuany",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "^18.0.18",
     "father": "^4.0.2",
     "react": "^18.2.0",
     "redux": "^4.2.0"
