--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-  "cSpell.words": ["dura", "fatherrc", "immer", "ityuany", "onecocjs"]
+  "cSpell.words": [
+    "dura",
+    "esno",
+    "fatherrc",
+    "globby",
+    "immer",
+    "ityuany",
+    "onecocjs",
+    "premajor",
+    "preminor",
+    "prepatch"
+  ]
 }
