--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest",
     "test:cov": "jest --colors --coverage --cache",
     "build": "pnpm -r run build",
-    "deploy": "pnpm -r publish --access public"
+    "deploy": "pnpm -r publish --access public",
+    "release": "esno ./scripts/release.ts"
   },
   "repository": {
     "type": "git",
@@ -25,10 +26,15 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
     "@types/node": "^18.7.14",
+    "@types/semver": "^7.3.12",
     "babel-jest": "^29.0.2",
+    "enquirer": "^2.3.6",
+    "esno": "^0.16.3",
     "father": "^4.0.2",
+    "globby": "^13.1.2",
     "jest": "^29.0.2",
     "pnpm": "^7.10.0",
+    "semver": "^7.3.7",
     "typescript": "^4.8.2"
   }
 }
